FIxed main overflow

--- a/style.scss
+++ b/style.scss
@@ -133,8 +133,8 @@ p {
 //-------------------------MAIN FLEX CONTAINER
 .flex-container {
     @include display-flex(column, stretch);
-    overflow-x: auto;
-    overflow-y: hidden;
+    overflow-x: hidden;
+    overflow-y: auto;
     height: 100vh;
 } /*places scroll bar under black header*/
 
